--- a/styles/style.css
+++ b/styles/style.css
@@ -250,7 +250,7 @@ header a {
 
 /* hambuger menu */
 .ham {
-  margin-left: 24em;
+  margin-left: 80%;
   margin-top: 1.8em;
   margin-bottom: 1em;
 	position: relative;
