--- a/styles/style.css
+++ b/styles/style.css
@@ -612,24 +612,46 @@ footer .menu {
 /* IPHONE 5 */
 
 @media (max-width: 20em) {
-.primary-navigation>li {
-  flex: none;
-  padding-left: 1.4em;
-  margin-bottom: 0.8em;
-}
+  .logo {
+    width: 12em;
+  }
 
-.primary-navigation>select {
-  flex: none;
-  padding-left: 0.5em;
-  margin-left: 1em;
-  padding-top: 0.2em;
-  margin-top: 0.35em;
-}
+  .ham {
+    margin-left: 1em;
+    margin-top: 4em;
+    margin-bottom: 0.5em;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
 
-.margin-gray {
-  margin-right: 0.2em;
-  fill: var(--text-color);
-}
+  .primary-header {
+    height: 10em;
+  }
+
+  .primary-navigation>li {
+    flex: none;
+    padding-left: 1.4em;
+    margin-bottom: 0.8em;
+  }
+
+  .primary-navigation>select {
+    flex: none;
+    padding-left: 0.5em;
+    margin-left: 1em;
+    padding-top: 0.2em;
+    margin-top: 0.35em;
+  }
+
+  .margin-gray {
+    margin-right: 0.2em;
+    fill: var(--text-color);
+  }
+
+  footer {
+    padding: 4em 1em;
+  }
 }
 
 /* IPAD */
@@ -641,11 +663,20 @@ footer .menu {
     margin: 2em 0 2em 4em;
   }
 
-
   .primary-navigation>li {
     flex: 50%;
     padding-left: 4em;
     margin-bottom: 0.8em;
+  }
+
+  footer {
+    padding: 4em 15em;
+  
+    text-align: center;
+  
+    position: relative;
+  
+    background-color: var(--light-blue);
   }
 }
 
